style.css
html {
  font-family: 'Inter', sans-serif;
  box-sizing: border-box;
  color: #F0ECE5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

.container-main {
  height: 100vh;
  background-color: #161A30;

  display: grid;
  grid-template-rows: 60px 1fr;
  grid-template-columns: 1fr 600px 1fr;
}

.container-body {
  padding-top: 20px;
  grid-column: 2 / 3;
  display: grid;
  row-gap: 20px;
  grid-template-rows: repeat(3, min-content);
}

/* Header */
.header {
  grid-column: 1 / -1;
  background-color: #31304D;
  display: flex;

  height: 60px;
}

.header>h1 {
  font-size: 1.3rem;
  margin: auto;
}

/* Scores section */
.container-scores {
  display: flex;
  justify-content: center;
  column-gap: 35px;
}

.container-scores .player-card {
  text-align: center;
}

.container-scores .player-name {
  width: 180px;
  height: 45px;
  margin-bottom: 8px;

  display: flex;
  align-items: center;
  justify-content: center;

  font-size: 1.1rem;
  font-weight: 700;

  border-radius: 6px;
  background-color: #31304D;
}

.container-scores .player-score {
  font-size: 1.8rem;
}

.container-scores .versus {
  align-self: center;
  font-weight: bold;
  font-size: 1.5rem;
}

/* Game board section */
.container-board .board {
  height: 600px;
  background-color: #F0ECE5;
}

.container-board .board-row {
  height: calc(100% / 3);
  display: flex;
}

.board .cell {
  display: flex;
  width: calc(100% / 3);
  height: 100%;
  color: #161A30;
  border: solid 1px rgb(0, 0, 0);
  align-items: center;
  justify-content: center;
  font-size: 120px;
}

.board .cell:hover {
  cursor: pointer;
}

/* Controls section */
.container-controls .btn-group {
  display: flex;
  column-gap: 6px;
  justify-content: right;
}

.container-controls .btn-group button {
  font-family: 'Inter', sans-serif;
  background-color: #31304D;
  border: none;
  color: #F0ECE5;
  padding: 15px 32px;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  border-radius: 6px;
}

.btn-group button:hover {
  background-color: #304d39;
}

/* TODO debugging */

